# FastCloudflare

./: pyproject.toml
src/: debug.py
src/fastcloudflare/: __init__.py  api_cfg.py  cloudflare_api.py  gateway.py
src/pycloudflare/: __init__.py  api_manager.py  cloudflare_api.py
tests/: __init__.py
