[project]
name = "fastcloudflare"
version = "0.1.2"
description = ""
authors = [
    {name = "Miles Copeland Luce"}
]
readme = "README.md"
requires-python =  ">=3.13,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "toomanysessions (>=0.3,<0.4)",
    "aiohttp (>=3.12.14,<4.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "toomanythreads (>=0.2.62,<0.3.0)",
]

[tool.poetry]
packages = [{include = "fastcloudflare", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
